--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,58 @@
+[tool.poetry]
+name = "medsam2"
+version = "1.0"
+description = "MedSAM2 was adapted from SAM2 (https://github.com/facebookresearch/sam2) for medical image segmentation."
+authors = ["WangLab <medseg20s@gmail.com>", "Soumick Chatterjee, PhD <soumick.chatterjee@fht.org>"]
+license = "Apache-2.0"
+readme = "README.md"
+homepage = "https://github.com/bowang-lab/MedSAM2"
+repository = "https://github.com/bowang-lab/MedSAM2"
+packages = [{include = "sam2"}] 
+build = "build.py" 
+
+[tool.poetry.dependencies]
+python = "<4.0,>=3.11.0"
+torch = ">=2.5.1"
+torchvision = ">=0.20.1"
+numpy = ">=2.0.1"
+tqdm = ">=4.66.5"
+hydra-core = ">=1.3.2"
+iopath = ">=0.1.10"
+pillow = ">=10.4.0"
+SimpleITK = ">=2.4.0"
+
+[tool.poetry.group.notebooks.dependencies]
+matplotlib = ">=3.9.1"
+jupyter = ">=1.0.0"
+opencv-python = ">=4.10.0"
+eva-decord = ">=0.6.1"
+
+[tool.poetry.group.interactive-demo.dependencies]
+Flask = ">=3.0.3"
+Flask-Cors = ">=5.0.0"
+av = ">=13.0.0"
+dataclasses-json = ">=0.6.7"
+eva-decord = ">=0.6.1"
+gunicorn = ">=23.0.0"
+imagesize = ">=1.4.1"
+pycocotools = ">=2.0.8"
+strawberry-graphql = ">=0.239.2"
+
+[tool.poetry.group.dev.dependencies]
+matplotlib = ">=3.9.1"
+jupyter = ">=1.0.0"
+black = "==24.2.0"
+usort = "==1.0.2"
+ufmt = "==2.0.0b2"
+fvcore = ">=0.1.5.post20221221"
+pandas = ">=2.2.3"
+scikit-image = ">=0.24.0"
+tensorboard = ">=2.17.0"
+pycocotools = ">=2.0.8"
+tensordict = ">=0.5.0"
+opencv-python = ">=4.10.0"
+submitit = ">=1.5.1"
+
 [build-system]
-requires = [
-    "setuptools>=61.0",  
-    "torch>=2.5.1",
-    ]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core>=1.0.0", "torch>=2.5.1"]
+build-backend = "poetry.core.masonry.api"
